2016-02-20  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	Update for upTeX-1.21.
	* uniblock.c: Update references Unicode blocks Blocks-8.0.0.txt
	and CMap files.
	* main.c: Update version number.

2015-07-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Better dependencies for 'make check'.

2015-03-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop checks for strdup and strtol.

2014-12-29  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	Update for upTeX-1.20.
	* uniblock.c: Update references Unicode blocks Blocks-7.0.0.txt
	and CMap files.
	* main.c: Update version number.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop the obsolete ACLOCAL_AMFLAGS.

2013-12-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tests/min10.tfm, tests/tmin10.vf: Update from Master.
	* makejvf.test: Now exact match of test output.

2013-06-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c, tfmread.c, tool.c, write.c: Always first include
	<kpathsea/config.h>.

2012-12-07  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tfmread.c: Drop unused variable (gcc-4.6 warning).

2012-11-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Avoid use of deprecated INCLUDES.

2012-09-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* main.c (main): add break;.

2012-09-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* main.c: Use xmalloc() and xstrdup().  Use getopt() to parse
	options, avoiding segmentation fault for missing parameters.
	* tfmread.c: Use xmalloc().
	* makejvf.test: Test options '-k0 -a abc'.

2012-09-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Remove W32TeX/TL diffs (from Akira).
	* main.c: Use "sjis" file encoding.
	Use kpse_find_file() to locate AFM file.
	Use FILESTRCASEEQ() and xbasename().

2012-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tool.c: Drop useless '#include <strings.h>'.

2012-07-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tfmread.c: Use fopen() mode "rb" for TFM file.